Fix Scroll: App's: Polish & Spacing

--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -12,8 +12,6 @@
     height: 100%; /* Be consistent with `#appDetail-error`/`.app-placeholder` (which can exist at the same location),
                      so that `appBrowser-wrapper` height does not change based on sibling content */
     padding-top: 15px;
-    /* Match bottom space found in UI design at `Core Portal > Applications` */
-    padding-bottom: 30px;
 }
 
 /* Overwrite Bootstrap's opinionated style */
@@ -23,8 +21,20 @@
     margin-bottom: 0;
 }
 
+/* Add 30 pixels of space at the bottom of app form and app info */
+/* HACK: Provide bottom buffer without overwriting `.form-group` globally (because not enough time to test global effects) */
+#appForm-wrapper .form-group {
+    margin-bottom: 0;
+}
+/* HACK: Use padding on last child of these flex item wrappers because flex items do not respect padding on main axis */
+.appInfo-wrapper > *:last-child,
+#appForm-wrapper > *:last-child {
+    /* Match bottom space found in UI design at `Core Portal > Applications` */
+    padding-bottom: 30px;
+}
+
 #appForm-wrapper {
-    overflow-y: scroll;
+    overflow-y: auto;
     display: flex;
     padding: 0 40px 0 30px;
     flex: 0.7 1 0;
@@ -33,7 +43,7 @@
 }
 
 .appInfo-wrapper {
-    overflow-y: scroll;
+    overflow-y: auto;
     flex: 0.5 1 0;
     max-width: 400px;
     border-right: 1px solid #989898;
